welcome.lessons.welcome.instructions.Instructions.scala.error
Program:3: error: not found: value marquer
marquer()
^Program:11: error: not found: value marquer
marquer()
^