welcome.lessons.welcome.instructions.Instructions.scala.code
avance()
marquer()
droite()
recule()
recule()
gauche()
gauche()
avance()
avance()
marquer()
droite()
recule()
